# uminho.cp.projeto

./: .gitignore  CHANGELOG.md  Nat.hs  README.md  Rascunho.md  Solucoes.tex  compile.sh  cp2021.code-workspace  cp2021t.aux  cp2021t.cabal  cp2021t.cabal.save0  cp2021t.idx  cp2021t.ilg  cp2021t.ind  cp2021t.lhs  cp2021t.out  cp2021t.sty  cp2021t.tex  cp2021t2.blg  cp2021t2.out
Entrega/: Submissão de Documentos.html
Outros/: cp2021t2.ilg  cp2021t2.ind  cp2021t2.lhs  cp2021tAnterior.lhs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  up-to-date
dist-newstyle/packagedb/ghc-8.10.4/: cp2021t-0.1.0.0-inplace.conf  package.cache
lib/: Cp.hs  HaddockTeste.hs  Mixed.hs  Solucoes.hs  Solucoes.lhs  SolucoesL.lhs  cp2021t.lhs  cp2021t2.lhs
outros/: Rascunho.md  cp2021t.cabal  cp2021t.tex  cp2021t2.idx
outros/anteiores/: cp2021t2.aux  cp2021t2.ptb  cp2021t2.tex
outros/dist-newstyle/cache/: compiler  solver-plan  source-hashes  up-to-date
outros/dist-newstyle/packagedb/ghc-8.10.4/: cp2021t-0.1.0.0-inplace.conf
outros/lib/: Cp.hs  Given.hs  List.hs  Solucoes.sty  Solucoes2.lhs
outros/test/: MyLibTest.hs
test/: MyLibTest.hs
